tests/should_succeed/pass.jou
import "stdlib/io.jou"

pass  # not useful, but also not wrong

if WINDOWS:
    pass
else:
    pass

def main() -> int:
    pass

    if WINDOWS:
        pass
    else:
        pass

    a = 114514
    if a == 114514:
        pass
    else:
        puts("wat?")

    return 0
