tests/syntax_error/local_var_comma.jou
def main() -> int:
    x, = 0  # Error: not a valid statement
